--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,11 +1,5 @@
-# Introduction
- 
-Welcome to Nextra! This is a basic docs template. You can use it as a starting point for your own project :)
+# Table of contents
 
-## What is Nextra?
-
-A **simple**, **powerful** and **flexible** site generation framework with everything you love from Next.js.
-
-## Documentation
-
-The documentation is available at [https://nextra.site](https://nextra.site).
+* [🏡 Home](README.md)
+* [⏩ Walkthrough](Tutorial.md)
+* [Join Discord](https://discord.gg/zH3k624aSv)
