--- a/pages/tutorial.mdx
+++ b/pages/tutorial.mdx
@@ -1,4 +1,4 @@
-# Walkthrough
+# Tutorial
 A full walkthrough of a Non-ELS vehicle workflow. Includes Blender, Siren Tool, ZModeler3, and ULC.
 ## Intro
 
