--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,10 +1,13 @@
+import Test from '../components/test.jsx';
+
 # Home
 
-## GTA5/FiveM Vehicle Documentation!
+<Test/>
+<div className=" nx-bg-blue-500">
+ inline jsx
+</div>
 
-This wiki is organized by Dawnstar FiveM
-
-Welcome to the new home of our vehicle documentation! We have been growing these documents privately for some time now, and it's about time we make this public to contributions. Feel free to fork our docs and suggest changes!
+Welcome to our GTA V and FiveM Documentation for vehicle developers!
 
 This documentation is meant to serve as more than an exhaustive list of variables and values. The goal of these documents is to help developers learn and understand the development process with a focus on FiveM, as well as provide best practices and tutorials.
 
@@ -12,31 +15,20 @@ If you're looking for a full record of all variables and values without commenta
 
 Have questions? [Join our Discord!](https://discord.gg/zH3k624aSv)
 
-
-
 Check out our full Non-ELS vehicle workflow
 
-{% content-ref url="Tutorial.md" %}
 [Tutorial.md](Tutorial.md)
-{% endcontent-ref %}
 
 View documentation the data files like carcols.meta and vehicles.meta
 
-{% content-ref url="broken-reference" %}
 [Broken link](broken-reference)
-{% endcontent-ref %}
 
 View Ultimate Lighting Controller documentation
 
-{% content-ref url="broken-reference" %}
 [Broken link](broken-reference)
-{% endcontent-ref %}
 
 Learn about Siren Tool
-
-{% content-ref url="broken-reference" %}
 [Broken link](broken-reference)
-{% endcontent-ref %}
 
 ***
 
