--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,4 +1,5 @@
 import Test from '../components/test.jsx';
+import Video from '../components/video.jsx';
 
 # Home
 
@@ -6,6 +7,8 @@ import Test from '../components/test.jsx';
 <div className=" nx-bg-blue-500">
  inline jsx
 </div>
+
+<Video url="https://www.youtube.com/watch?v=f1H6sohjTao&t=5s"/>
 
 Welcome to our GTA V and FiveM Documentation for vehicle developers!
 
