--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,5 +1,5 @@
-import Test from '../components/test.jsx';
-import Video from '../components/video.jsx';
+import Test from '../components/Test.jsx';
+import Video from '../components/Video.jsx';
 
 # Home
 
