--- a/pages/ulc/overview.mdx
+++ b/pages/ulc/overview.mdx
@@ -1,5 +1,5 @@
-import Button from '../components/Button'
-import Video from '../components/Video'
+import Button from '../../components/Button'
+import Video from '../../components/Video'
 import { Steps } from 'nextra-theme-docs'
 import { Callout } from 'nextra-theme-docs'
 
@@ -33,8 +33,8 @@ It's designed to be simple, customizable, and easy to setup.
     </div>
   ### Extract
     
-    Extract ULC and place it in your resources folder.
-    <Callout type="info">The resource works best if you don't rename it from ``ulc``.</Callout>
+    - Extract ULC and place it in your resources folder.
+    - The resource works best if you don't rename it from ``ulc``.
   ### Add to ``server.cfg``
     Add ``ensure ulc`` to your ``server.cfg`` file.
 
