--- a/pages/data-files/carcols.mdx
+++ b/pages/data-files/carcols.mdx
@@ -54,7 +54,7 @@ _Lightbar Featured in example "EX.2" is a "42" Code 3 Pursuit, Top View" taken f
 
 ## Rotator Lights
 
-> For information on rotators click through to the content [originally hosted here](https://www.modding-forum.com/guide/20-emergency-lights-rotator-lightbars-and-wig-wags/) by [Smanbg](https://www.modding-forum.com/user/915-smanbg/), [Cj24](https://www.modding-forum.com/user/2-cj24/) and [PNWParksFan](https://www.modding-forum.com/user/2672-pnwparksfan/). A small snippet is shown below.
+For information on rotators click through to the content [originally hosted here](https://www.modding-forum.com/guide/20-emergency-lights-rotator-lightbars-and-wig-wags/) by [Smanbg](https://www.modding-forum.com/user/915-smanbg/), [Cj24](https://www.modding-forum.com/user/2-cj24/) and [PNWParksFan](https://www.modding-forum.com/user/2672-pnwparksfan/). A small snippet is shown below.
 
 > In comparison to your traditional strobe or LED lightbar with flashing lights, rotating lights require quite a different approach when using them, in particular, the sirens have to be covered, rather than scaled down. This guide is going to walk through the two common methods for rotator lightbars.
 >
@@ -86,11 +86,11 @@ _Alternatively, join our Discord and contact us!_
 
 These values go here: `<color value="0xFF0000FF"/>`
 
-> Data gathered by Zero parsed by, HairyMineFart, and Organized by Dawnstar
->
-> Metallic Colors and Matte Colors have been excluded as they serve no purpose in siren colors.
->
-> [Find the full list of colors here](https://www.se7ensins.com/forums/threads/vehicle-colors.1169166/)
+Data gathered by Zero parsed by, HairyMineFart, and Organized by Dawnstar
+
+Metallic Colors and Matte Colors have been excluded as they serve no purpose in siren colors.
+
+[Find the full list of colors here](https://www.se7ensins.com/forums/threads/vehicle-colors.1169166/)
 
 **Most Used Colors**
 
