Home page edits

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,43 +1,30 @@
 import Video from '../components/Video.jsx';
+import { Callout } from 'nextra-theme-docs'
 
 # Home
 
 Welcome to our GTA V and FiveM Documentation for vehicle developers!
 
-This documentation is meant to serve as more than an exhaustive list of variables and values. The goal of these documents is to help developers learn and understand the development process with a focus on FiveM, as well as provide best practices and tutorials.
+## Project Goals
+- Provide a comprehensive, easy-to-use, and easy-to-understand documentation for vehicle developers
+- Maintain an open-source set of vehicle documents in a single location that can be contributed to by anyone
 
-If you're looking for a full record of all variables and values without commentary or best practices, see [the GTAMods Wiki.](https://gtamods.com/wiki/Main\_Page)
+<Callout  type="info">
+  This project focuses on commentary and advice geared toward FiveM developers rather than being an exhaustive resource on every value in the data files.<br /> <br />
+  If you're looking for a full list of all values and variables see [the GTAMods Wiki.](https://gtamods.com/wiki/Main\_Page)
+</Callout>
 
 Have questions? [Join our Discord!](https://discord.gg/zH3k624aSv)
 
-Check out our full Non-ELS vehicle workflow
+## Ways to Contribute
 
-[Tutorial.md](Tutorial.md)
-
-View documentation the data files like carcols.meta and vehicles.meta
-
-[Broken link](broken-reference)
-
-View Ultimate Lighting Controller documentation
-
-[Broken link](broken-reference)
-
-Learn about Siren Tool
-[Broken link](broken-reference)
-
-***
-
-## How to Contribute
-
-1. [Create an issue](https://github.com/dwnstr/vehicle-docs/issues/new?labels=Suggestion\&template=suggestion.md\&title=%5BSuggestion%5D) with a suggested change or addition.
-2. Fork the repo and make your changes, then create a pull request for review.
+1. (Easy) [Create an issue](https://github.com/dwnstr/docs/issues/new?labels=Suggestion\&template=suggestion.md\&title=%5BSuggestion%5D) with a suggested change or addition.
+2. (Advanced) Fork the repo and make your changes, then create a pull request for review.
 
 ### Contribution Guidelines:
 
-* Keep things formatted nicely
+* Keep things formatted nicely (learn [Markdown](https://www.markdownguide.org/basic-syntax/) if you don't know it already)
 * Maintain good grammar
 * Keep everything under the correct headings
 * Make a new heading if you need to, but only if it's something that is not covered at all yet
 * Feel free to copy-paste things from other places, but ensure you credit the original author, and provide a link to the original content
-
-***
