Update videos in tutorial

--- a/pages/tutorial.mdx
+++ b/pages/tutorial.mdx
@@ -1,3 +1,6 @@
+import Video from '../components/Video.jsx';
+import { Callout } from 'nextra-theme-docs'
+
 # Tutorial
 A full walkthrough of a Non-ELS vehicle workflow. Includes Blender, Siren Tool, ZModeler3, and ULC.
 ## Intro
@@ -36,7 +39,7 @@ If you're not familiar with Siren Tool, it's an application I made to aid in thi
 
 Here's a basic tutorial for Siren Tool so you can see how it works, and the basic controls.
 
-[https://www.youtube.com/watch?v=9o2ZMGoNrgM](https://www.youtube.com/watch?v=9o2ZMGoNrgM)
+<Video url="https://www.youtube.com/watch?v=9o2ZMGoNrgM"/>
 
 When Siren Tool becomes really powerful is when you are trying to use complex techniques like siren layering, and siren reusing.
 
@@ -133,9 +136,9 @@ There isn't a lot of video tutorials on zmod as its a very specific software to 
 
 He has a lot more videos on his channel and its worth a check out if you are looking to get into vehicle development for GTA.
 
-Now that the basics of zmod has been covered, to create Non ELS vehicles it gets a tad more complicated and is where zmod comes in very handy. I have a video on how to create non ELS vehicles that you can watch here:
+Now that the basics of zmod has been covered, to create Non ELS vehicles it gets a tad more complicated and is where zmod comes in very handy. Here's a video on how to create Non-ELS vehicles that you can watch here:
 
-[Creating Non ELS Vehicles](https://www.youtube.com/watch?v=1a9vSk89RL4)
+<Video url="https://www.youtube.com/watch?v=1a9vSk89RL4"/>
 
 ## What is Actually Happening?
 
