--- a/pages/ulc/config.mdx
+++ b/pages/ulc/config.mdx
@@ -216,6 +216,11 @@ Follow steps 1 - 5 above to learn how to create a ulc.lua file.
 
 The concept of nesting Sirens into an Extra is critical to proper usage of ULC. Most of the features of ULC require sirens to be contained within extras.
 
-All you have to do to set this up is parent your Sirens to an Extra once they are compounded. Your extra can have any other parts also attached. I.E you could have a divider to block the emissives behind the emissives you want to show, such as in the case of a traffic advisor.
+All you have to do to set this up is parent your Sirens to an Extra once they are compounded. Your extra can have any other parts also attached. I.E you 
+could have a divider to block the emissives behind the emissives you want to show, such as in the case of a traffic advisor.
+
+<Callout>
+  ULC works best when extras don't have collisions. If you have a collision on your extra, ULC will not be able to turn it on or off consistently.
+</Callout>
 
 For detailed info about each feature and their config values see the below pages.
