--- a/pages/ulc/config.mdx
+++ b/pages/ulc/config.mdx
@@ -1,5 +1,6 @@
 import Button from '../../components/Button'
 import Video from '../../components/Video'
+import PageCard from '../../components/PageCard'
 import { Steps } from 'nextra-theme-docs'
 import { Callout } from 'nextra-theme-docs'
 import { Tab, Tabs } from 'nextra-theme-docs'
@@ -223,4 +224,39 @@ could have a divider to block the emissives behind the emissives you want to sho
   ULC works best when extras don't have collisions. If you have a collision on your extra, ULC will not be able to turn it on or off consistently.
 </Callout>
 
+## What to Read Next
 For detailed info about each feature and their config values see the below pages.
+<div className="nx-grid lg:nx-grid-cols-2 nx-grid-rows-2 nx-gap-4 nx-mt-4">
+  <PageCard 
+    name="Stage Controls"  link="/ulc/config/stage-controls"
+    description="Create buttons to control lighting stages."
+  />
+  <PageCard 
+    name="Default Stages"  link="/ulc/config/default-stages"
+    description="Automatically set lighting configuration when lights are activated."
+  />
+  <PageCard 
+    name="Cruise Lights"  link="/ulc/config/cruise-lights"
+    description="Configure smart cruise lights/steady burns that run all the time, or based on time of day."
+  />
+  <PageCard 
+    name="Park Patterns"  link="/ulc/config/park-patterns-sync"
+    description="Change lighting when the vehicle is stopped, and sync with other vehicles."
+  />
+  <PageCard 
+    name="Brake Extras" link="/ulc/config/brake-extras"
+    description="Setup brake extras that turn on when the vehicle is braking or stopped."
+  />
+  <PageCard 
+    name="Door Extras" link="/ulc/config/door-extras"
+    description="Show or hide extras when doors open and close."
+  />
+  <PageCard
+    name="Horn Extras" link="/ulc/config/horn-extras"
+    description="Enable an extra when the horn is pressed."
+  />
+  <PageCard 
+    name="Reverse Extras" link="/ulc/config/reverse-extras"
+    description="Enable an extra while the vehicle is in reverse."
+  />
+</div>
