--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -16,7 +16,8 @@ Welcome to our GTA V and FiveM Documentation for vehicle developers!
 
 Have questions? [Join our Discord!](https://discord.gg/zH3k624aSv)
 
-## Ways to Contribute
+## You Can Contribute!
+This project is open-source and we welcome contributions from anyone! If you have a suggestion or a change you'd like to make, you can do one of the following:
 
 1. (Easy) [Create an issue](https://github.com/dwnstr/docs/issues/new?labels=Suggestion\&template=suggestion.md\&title=%5BSuggestion%5D) with a suggested change or addition.
 2. (Advanced) Fork the repo and make your changes, then create a pull request for review.
