--- a/pages/ulc/configuration/cruise-lights.mdx
+++ b/pages/ulc/configuration/cruise-lights.mdx
@@ -20,7 +20,7 @@ Cruise lights don't have to be sirens. They can just be plain emissive meshes th
 However, if you want environment lighting, or you want the steady burns to only show when the emergency lights are activated, then you should make these a siren.
 
 ## Global Settings
-These settings are found in the ``config.lua`` file and affect the whole server.
+These settings are found in the ``config.lua`` file under ``SteadyBurnSettings`` and affect all vehicles on the server that use ULC.
 ### ``nightStartHour``
 This value specifies the hour of the day when the cruise lights will activate.
 ```lua
