--- a/pages/tutorials/workflow.mdx
+++ b/pages/tutorials/workflow.mdx
@@ -1,4 +1,4 @@
-import Video from '../components/Video.jsx';
+import Video from '../../components/Video.jsx';
 import { Callout } from 'nextra-theme-docs'
 
 # Tutorial
