--- a/pages/data-files/carcols.mdx
+++ b/pages/data-files/carcols.mdx
@@ -78,7 +78,7 @@ Good Rotary BPM is 120 BPM with Flash set to False
 
 ## Light Groups
 
-_This section needs contributors_ _If you know anything about Light Groups, fork the repository to contribute!_
+This section needs contributors. If you know anything about Light Groups, fork the repository to contribute!
 
 _Alternatively, join our Discord and contact us!_
 
