--- a/pages/data-files/handling.mdx
+++ b/pages/data-files/handling.mdx
@@ -23,13 +23,13 @@ Used by the Vehicles.meta file, to identify the handling line of the particular 
 
 The weight of the vehicle. Values should be given in Kilograms.
 
-* Used when the vehicle collides with another vehicle or a non-static object.
+- Used when the vehicle collides with another vehicle or a non-static object.
 
 #### fInitialDragCoeff
 
 Sets the drag coefficient of the vehicle. Increase to simulate aerodynamic drag.
 
-* Value: 10-120
+- Value: 10-120
 
 #### vecCentreOfMassOffset
 
