--- a/pages/siren-tool/intro.mdx
+++ b/pages/siren-tool/intro.mdx
@@ -1,3 +1,4 @@
 # What is Siren Tool?
 
-Siren Tool is a comprehensive tool for designing and generating siren patterns for GTA and FiveM Non-ELS vehicles.
+Siren Tool is a comprehensive tool for designing and generating siren patterns for GTA and FiveM Non-ELS vehicles. It is
+designed to be easy to use and intuitive, while also providing a wide range of features for experienced users.
