--- a/pages/ulc/configuration.mdx
+++ b/pages/ulc/configuration.mdx
@@ -211,7 +211,7 @@ Vehicle developers who are creating vehicles compatible with ULC can provide a l
 
 By providing a configuration file your vehicle will be pre-configured for all users who use it. Users will be able to simply plug-and-play your vehicle with ULC functionality.
 
-Follow steps 1 - 5 above to learn how to create a ulc.lua file.
+Follow steps 1-5 above to learn how to create a ulc.lua file.
 
 ### Extras with Sirens
 
