--- a/pages/ulc/in-game-usage.mdx
+++ b/pages/ulc/in-game-usage.mdx
@@ -2,7 +2,7 @@
 
 ![](https://i.imgur.com/DwIvplS.png)
 
-ULC includes an intuitive menu with easy-to-use controls to change various settings. To access the menu you can use the ``/ulc`` command!
+ULC includes an intuitive menu with easy-to-use controls to change various settings. To access the menu use the ``/ulc`` command!
 
 ![](https://i.imgur.com/Y1PgIZG.png)
 
