--- a/pages/ulc/overview.mdx
+++ b/pages/ulc/overview.mdx
@@ -11,7 +11,7 @@ ULC is an all-in-one lighting controller for Non-ELS vehicles in FiveM that allo
 realistic, and fully configurable lighting your vehicle by interacting with extra-based lighting
 stages! 
 
-It's designed to be simple, customizable, and easy to setup.
+It's designed to be simple, customizable and easy to setup.
 
 ## Preview
 <Video url="https://www.youtube.com/watch?v=f1H6sohjTao&t=5s"/>
