--- a/pages/ulc/configuration/cruise-lights.mdx
+++ b/pages/ulc/configuration/cruise-lights.mdx
@@ -48,7 +48,7 @@ will be enabled at all times.
 forceOn = false,
 ```
 ### ``useTime``
-This value specifies whether the cruise lights should be enabled based on the time of day.
+This value specifies whether the cruise lights should be enabled at night.
 If set to true, cruise lights will be force enabled at night only.
 ```lua
 useTime = true,
