--- a/pages/ulc/configuration/park-patterns-sync.mdx
+++ b/pages/ulc/configuration/park-patterns-sync.mdx
@@ -6,7 +6,7 @@ import Video from '../../../components/Video.jsx';
 
 Park patterns allow you to automatically enable or disable extras based on the speed of the vehicle. The effect will activate after a short delay when the vehicle is stopped.
 
-The feature is intended for use with park patterns, that is, enabling a park pattern stage extra when the vehicle comes to a full stop. However, you can specify the speed threshold to enable the extras when the vehicle is going below a certain speed if you want to.
+The feature is intended for use with park patterns; enabling a park pattern stage extra when the vehicle comes to a full stop. However, you can specify the speed threshold to enable the extras when the vehicle is going below a certain speed if you want to.
 
 You can also choose to sync park patterns with other nearby vehicles.
 
