Add meta properties

--- a/pages/data-files/carcols.mdx
+++ b/pages/data-files/carcols.mdx
@@ -1,3 +1,8 @@
+export const meta = {
+  title: 'carcols.meta',
+  description: 'Details about the carcols.meta file for FiveM and GTA vehicle developers.',
+}
+
 # carcols.meta
 
 ## Siren Sequencers
