--- a/pages/data-files/carvariations.mdx
+++ b/pages/data-files/carvariations.mdx
@@ -1,3 +1,9 @@
+export const meta = {
+  title: 'carvariations.meta',
+  description: 'Details about the carvariations.meta file for FiveM and GTA vehicle developers.',
+}
+
+
 # carvariations.meta
 
 **THIS PAGE IS HEAVILY WIP, EXCUSE THE APPEARANCE**
