--- a/pages/data-files/handling.mdx
+++ b/pages/data-files/handling.mdx
@@ -1,3 +1,9 @@
+export const meta = {
+  title: 'handling.meta',
+  description: 'Details about the handling.meta file for FiveM and GTA vehicle developers.',
+}
+
+
 # handling.meta
 
 The content of [Handling.meta](https://github.com/Flohhhhh/vehicle-docs/new/main/docs#handlingmeta) is excessively long and complex, we have excluded uncommon variables from our documentation. [Click here](https://forums.gta5-mods.com/topic/3842/tutorial-handling-meta) or [here](https://gtamods.com/wiki/Handling.meta) to view full documentation elsewhere.
