--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,6 +1,11 @@
 import Video from '../components/Video.jsx';
 import { Callout } from 'nextra-theme-docs'
 
+export const meta = {
+  title: 'Home',
+  description: 'Welcome to our GTA V and FiveM Documentation for vehicle developers!',
+}
+
 # Home
 
 Welcome to our GTA V and FiveM Documentation for vehicle developers!
