--- a/pages/siren-tool/intro.mdx
+++ b/pages/siren-tool/intro.mdx
@@ -1,3 +1,9 @@
+export const meta = {
+  title: 'Siren Tool',
+  description: 'Learn the basics of Siren Tool.',
+}
+
+
 # What is Siren Tool?
 
 Siren Tool is a comprehensive tool for designing and generating siren patterns for GTA and FiveM Non-ELS vehicles. It is
