--- a/pages/tutorials/editing-patterns.mdx
+++ b/pages/tutorials/editing-patterns.mdx
@@ -1,5 +1,12 @@
 import PageCard from '../../components/PageCard'
 
+export const meta = {
+  title: 'How to Edit Patterns',
+  description: 'Learn how to edit lighting patterns on existing Non-ELS vehicles.',
+}
+ 
+# My MDX page
+
 # How to edit patterns
 
 If you are looking to edit lighting patterns on a Non-ELS vehicle created by someone else, you will need a basic understanding of how Non-ELS works,
