--- a/pages/tutorials/workflow.mdx
+++ b/pages/tutorials/workflow.mdx
@@ -1,6 +1,11 @@
 import Video from '../../components/Video.jsx';
 import { Callout } from 'nextra-theme-docs'
 
+export const meta = {
+  title: 'Non-ELS Vehicle Workflow',
+  description: 'A full walkthrough of a Non-ELS vehicle workflow. Includes Blender, Siren Tool, ZModeler3, and ULC.',
+}
+
 # Tutorial
 A full walkthrough of a Non-ELS vehicle workflow. Includes Blender, Siren Tool, ZModeler3, and ULC.
 ## Intro
