--- a/pages/ulc/configuration.mdx
+++ b/pages/ulc/configuration.mdx
@@ -5,6 +5,11 @@ import { Steps } from 'nextra-theme-docs'
 import { Callout } from 'nextra-theme-docs'
 import { Tab, Tabs } from 'nextra-theme-docs'
 
+export const meta = {
+  title: 'ULC Configuration Overview',
+  description: 'An overview of ULC features and configuration options.',
+}
+
 # Configuration
 An overview of ULC features and configuration options.
 
