--- a/pages/ulc/configuration/cruise-lights.mdx
+++ b/pages/ulc/configuration/cruise-lights.mdx
@@ -1,5 +1,10 @@
 import Video from '../../../components/Video'
 
+export const meta = {
+  title: 'ULC Cruise Lights',
+  description: 'How to use cruise lights in ULC',
+}
+
 # Cruise Lights
 
 The smart cruise lights feature allows you to use ULC to specify extras that will be force enabled either:
