--- a/pages/ulc/configuration/park-patterns-sync.mdx
+++ b/pages/ulc/configuration/park-patterns-sync.mdx
@@ -1,5 +1,10 @@
 import Video from '../../../components/Video.jsx';
 
+export const meta = {
+  title: 'ULC Park Patterns & Sync',
+  description: 'How to use park patterns in ULC',
+}
+
 # Park Patterns & Sync
 
 ## Overview
