--- a/pages/ulc/in-game-usage.mdx
+++ b/pages/ulc/in-game-usage.mdx
@@ -1,3 +1,8 @@
+export const meta = {
+  title: 'ULC In-game Usage',
+  description: 'Learn how to use ULC in-game as a player',
+}
+
 # In-Game Usage
 
 ![](https://i.imgur.com/DwIvplS.png)
