--- a/pages/ulc/overview.mdx
+++ b/pages/ulc/overview.mdx
@@ -3,6 +3,11 @@ import Video from '../../components/Video'
 import { Steps } from 'nextra-theme-docs'
 import { Callout } from 'nextra-theme-docs'
 
+export const meta = {
+  title: 'ULC Overview',
+  description: 'Learn more about ULC and how to get started with it.',
+}
+
 # Getting Started
 ![](https://user-images.githubusercontent.com/48927090/224608424-52e9505c-adc2-47dd-b5ab-30a5f933427f.png)
 
