--- a/pages/data-files/vehicles.mdx
+++ b/pages/data-files/vehicles.mdx
@@ -1,3 +1,8 @@
+export const meta = {
+  title: 'vehicles.meta',
+  description: 'Details about the vehicles.meta file for FiveM and GTA vehicle developers.',
+}
+
 # vehicles.meta
 
 ## Vehicle naming
