--- a/pages/data-files/handling.mdx
+++ b/pages/data-files/handling.mdx
@@ -1,7 +1,7 @@
-export const meta = {
-  title: 'handling.meta',
-  description: 'Details about the handling.meta file for FiveM and GTA vehicle developers.',
-}
+---
+title: handling.meta
+description: Details about the handling.meta file for FiveM and GTA vehicle developers.
+---
 
 
 # handling.meta
