--- a/pages/ulc/configuration/cruise-lights.mdx
+++ b/pages/ulc/configuration/cruise-lights.mdx
@@ -1,9 +1,9 @@
-import Video from '../../../components/Video'
+---
+title: ULC Cruise Lights
+description: How to use cruise lights in ULC
+---
 
-export const meta = {
-  title: 'ULC Cruise Lights',
-  description: 'How to use cruise lights in ULC',
-}
+import Video from '../../../components/Video'
 
 # Cruise Lights
 
