--- a/pages/ulc/configuration/park-patterns-sync.mdx
+++ b/pages/ulc/configuration/park-patterns-sync.mdx
@@ -1,9 +1,9 @@
-import Video from '../../../components/Video.jsx';
+---
+title: ULC Park Patterns & Sync
+description: How to use park patterns in ULC
+---
 
-export const meta = {
-  title: 'ULC Park Patterns & Sync',
-  description: 'How to use park patterns in ULC',
-}
+import Video from '../../../components/Video.jsx';
 
 # Park Patterns & Sync
 
