--- a/pages/ulc/overview.mdx
+++ b/pages/ulc/overview.mdx
@@ -1,3 +1,8 @@
+---
+title: ULC Overview
+description: Learn more about ULC and how to get started with it.
+---
+
 import Button from '../../components/Button'
 import Video from '../../components/Video'
 import { Steps } from 'nextra-theme-docs'
