--- a/pages/data-files/carcols.mdx
+++ b/pages/data-files/carcols.mdx
@@ -1,7 +1,7 @@
-export const meta = {
-  title: 'carcols.meta',
-  description: 'Details about the carcols.meta file for FiveM and GTA vehicle developers.',
-}
+---
+title: carcols.meta
+description: Details about the carcols.meta file for FiveM and GTA vehicle developers.
+---
 
 # carcols.meta
 
