--- a/pages/data-files/carvariations.mdx
+++ b/pages/data-files/carvariations.mdx
@@ -1,7 +1,7 @@
-export const meta = {
-  title: 'carvariations.meta',
-  description: 'Details about the carvariations.meta file for FiveM and GTA vehicle developers.',
-}
+---
+title: carvariations.meta
+description: Details about the carvariations.meta file for FiveM and GTA vehicle developers.
+---
 
 
 # carvariations.meta
