--- a/pages/siren-tool/intro.mdx
+++ b/pages/siren-tool/intro.mdx
@@ -1,3 +1,8 @@
+---
+title: Siren Tool
+description: Learn the basics of Siren Tool.
+---
+
 export const meta = {
   title: 'Siren Tool',
   description: 'Learn the basics of Siren Tool.',
