--- a/pages/tutorials/editing-patterns.mdx
+++ b/pages/tutorials/editing-patterns.mdx
@@ -1,10 +1,10 @@
+---
+title: How to Edit Patterns
+description: Learn how to edit lighting patterns on existing Non-ELS vehicles.
+---
+
 import PageCard from '../../components/PageCard'
 
-export const meta = {
-  title: 'How to Edit Patterns',
-  description: 'Learn how to edit lighting patterns on existing Non-ELS vehicles.',
-}
- 
 # My MDX page
 
 # How to edit patterns
