--- a/pages/tutorials/what-is-non-els.mdx
+++ b/pages/tutorials/what-is-non-els.mdx
@@ -1,7 +1,7 @@
-export const meta = {
-  title: 'What is Non-ELS?',
-  description: 'Learn the basics of emergency lighting with Non-ELS for FiveM and GTA vehicles.',
-}
+---
+title: What is Non-ELS?
+description: Learn the basics of emergency lighting with Non-ELS for FiveM and GTA vehicles.
+---
 
 # What is Non-ELS?
 
