--- a/pages/ulc/configuration.mdx
+++ b/pages/ulc/configuration.mdx
@@ -1,3 +1,8 @@
+---
+title: ULC Configuration Overview
+description: An overview of ULC features and configuration options.
+---
+
 import Button from '../../components/Button'
 import Video from '../../components/Video'
 import PageCard from '../../components/PageCard'
