--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -25,6 +25,7 @@ Have questions? [Join our Discord!](https://discord.gg/zH3k624aSv)
 This project is open-source and we welcome contributions from anyone! If you have a suggestion or a change you'd like to make, you can do one of the following:
 
 1. (Easy) [Create an issue](https://github.com/dwnstr/docs/issues/new?labels=Suggestion\&template=suggestion.md\&title=%5BSuggestion%5D) with a suggested change or addition.
+2. (Medium) Click the pencil icon on [any file in the tree](https://github.com/dwnstr/docs/edit/main/pages/index.mdx) to make changes in browser.
 2. (Advanced) Fork the repo and make your changes, then create a pull request for review.
 
 ### Contribution Guidelines:
