Add some page cards

--- a/pages/ulc/configuration.mdx
+++ b/pages/ulc/configuration.mdx
@@ -238,35 +238,35 @@ could have a divider to block the emissives behind the emissives you want to sho
 For detailed info about each feature and their config values see the below pages.
 <div className="nx-grid lg:nx-grid-cols-2 nx-grid-rows-2 nx-gap-4 nx-mt-4">
   <PageCard 
-    name="Stage Controls"  link="/ulc/config/stage-controls"
+    name="Stage Controls"  link="/ulc/configuration/stage-controls"
     description="Create buttons to control lighting stages."
   />
   <PageCard 
-    name="Default Stages"  link="/ulc/config/default-stages"
+    name="Default Stages"  link="/ulc/configuration/default-stages"
     description="Automatically set lighting configuration when lights are activated."
   />
   <PageCard 
-    name="Cruise Lights"  link="/ulc/config/cruise-lights"
+    name="Cruise Lights"  link="/ulc/configuration/cruise-lights"
     description="Configure smart cruise lights/steady burns that run all the time, or based on time of day."
   />
   <PageCard 
-    name="Park Patterns"  link="/ulc/config/park-patterns-sync"
+    name="Park Patterns"  link="/ulc/configuration/park-patterns-sync"
     description="Change lighting when the vehicle is stopped, and sync with other vehicles."
   />
   <PageCard 
-    name="Brake Extras" link="/ulc/config/brake-extras"
+    name="Brake Extras" link="/ulc/configuration/brake-extras"
     description="Setup brake extras that turn on when the vehicle is braking or stopped."
   />
   <PageCard 
-    name="Door Extras" link="/ulc/config/door-extras"
+    name="Door Extras" link="/ulc/configuration/door-extras"
     description="Show or hide extras when doors open and close."
   />
   <PageCard
-    name="Horn Extras" link="/ulc/config/horn-extras"
+    name="Horn Extras" link="/ulc/configuration/horn-extras"
     description="Enable an extra when the horn is pressed."
   />
   <PageCard 
-    name="Reverse Extras" link="/ulc/config/reverse-extras"
+    name="Reverse Extras" link="/ulc/configuration/reverse-extras"
     description="Enable an extra while the vehicle is in reverse."
   />
 </div>
